# docs/swagger.yaml
@@ -513,6 +513,10 @@ paths:
         in: query
         name: sorted_by
         type: string
+      - description: Search by title
+        in: query
+        name: search
+        type: string
       produces:
       - application/json
       responses:
